--- a/about.html
+++ b/about.html
@@ -68,8 +68,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Service</a></li>
                     <li><a href="plans.html">Hosting</a></li>
                     <li><a href="domain.html">Domain</a></li>
@@ -189,7 +189,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
-						<p>Supporting Staff</p>
+						<p>CFO</p>
 					</div>
 					<div class="team_desc-right">
 					   <ul class="team_social">
@@ -206,7 +206,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
-						<p>Developer</p>
+						<p>CTO</p>
 					</div>
 					<div class="team_desc-right">
 					   <ul class="team_social">
@@ -223,7 +223,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
-						<p>Hoster</p>
+						<p>CMO</p>
 					</div>
 					<div class="team_desc-right">
 					   <ul class="team_social">
@@ -243,7 +243,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
-						<p>Supporting Staff</p>
+						<p>Lead Engineer</p>
 					</div>
 					<div class="team_desc-right">
 					   <ul class="team_social">
@@ -260,7 +260,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
-						<p>CEO</p>
+						<p>Lead Technician</p>
 					</div>
 					<div class="team_desc-right">
 					   <ul class="team_social">
@@ -277,7 +277,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
-						<p>Hoster</p>
+						<p>Lead Developer </p>
 					</div>
 					<div class="team_desc-right">
 					   <ul class="team_social">
