--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Service</a></li>
                     <li><a href="plans.html">Hosting</a></li>
@@ -83,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </li>
                     <li><a href="promo.html">Promo</a></li>
                     <li><a href="reseller.html">Reseller</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li  class="active"><a href="contact.html">Contact Us</a></li>
                  </ul>
                  <script type="text/javascript" src="js/nav.js"></script>
             </div>
