--- a/domain.html
+++ b/domain.html
@@ -68,11 +68,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Service</a></li>
                     <li><a href="plans.html">Hosting</a></li>
-                    <li><a href="domain.html">Domain</a></li>
+                    <li class="active"><a href="domain.html">Domain</a></li>
                     <li><a href="webmail.html">WebMail</a></li>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Store<span class="caret"></span></a>
@@ -108,9 +108,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <div class="one-fifth column">
                                     	<span class="selection-box"><select class="domains valid" name="domains">
                                         	<option>Year(0-1 Year)</option>
-                                            <option>.info (From $3 / Year)</option>
-                                            <option>.net (From $3 / Year)</option>
-                                            <option>.org (From $3 / Year)</option>
+                                            <option>.info (From Rp3 / Year)</option>
+                                            <option>.net (From Rp3 / Year)</option>
+                                            <option>.org (From Rp3 / Year)</option>
                                         </select></span>
                                     </div>
                                     <div class="one-fifth column">
@@ -133,21 +133,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               	</div>
               	<div class="col-md-6 charge_right">
               		<ul class="charge">
-              			<li>.NYC<br><span class="m_12">$</span><span class="m_11">5</span></li>
-              			<li>.WIKI<br><span class="m_12">$</span><span class="m_11">5</span></li>
-              			<li>.UK<br><span class="m_12">$</span><span class="m_11">3</span></li>
-              			<li>.ENG<br><span class="m_12">$</span><span class="m_11">7</span></li>
-              			<li>.ML<br><span class="m_12">$</span><span class="m_11">5</span></li>
-              			<li class="last">.KM<br><span class="m_12">$</span><span class="m_11">8</span></li>
+              			<li>.NYC<br><span class="m_12">Rp</span><span class="m_11">100<span class="m_12">rb</span></span></li>
+              			<li>.WIKI<br><span class="m_12">Rp</span><span class="m_11">130<span class="m_12">rb</span></span></li>
+              			<li>.UK<br><span class="m_12">Rp</span><span class="m_11">120<span class="m_12">rb</span></span></li>
+              			<li>.ENG<br><span class="m_12">Rp</span><span class="m_11">132<span class="m_12">rb</span></span></li>
+              			<li>.ML<br><span class="m_12">Rp</span><span class="m_11">160<span class="m_12">rb</span></span></li>
+              			<li class="last">.KM<br><span class="m_12">Rp</span><span class="m_11">90<span class="m_12">rb</span></span></li>
               			<div class="clearfix"> </div>
               		</ul>
               		<ul class="charge charge_box">
-              			<li>.COM<br><span class="m_12">$</span><span class="m_11">5</span></li>
-              			<li>.IN<br><span class="m_12">$</span><span class="m_11">1</span></li>
-              			<li>.ORG<br><span class="m_12">$</span><span class="m_11">2</span></li>
-              			<li>.NET<br><span class="m_12">$</span><span class="m_11">7</span></li>
-              			<li>.BIZ<br><span class="m_12">$</span><span class="m_11">5</span></li>
-              			<li class="last">.AP<br><span class="m_12">$</span><span class="m_11">8</span></li>
+              			<li>.COM<br><span class="m_12">Rp</span><span class="m_11">110<span class="m_12">rb</span></span></li>
+              			<li>.IN<br><span class="m_12">Rp</span><span class="m_11">127<span class="m_12">rb</span></span></li>
+              			<li>.ORG<br><span class="m_12">Rp</span><span class="m_11">147<span class="m_12">rb</span></span></li>
+              			<li>.NET<br><span class="m_12">Rp</span><span class="m_11">149<span class="m_12">rb</span></span></li>
+              			<li>.BIZ<br><span class="m_12">Rp</span><span class="m_11">100<span class="m_12">rb</span></span></li>
+              			<li class="last">.AP<br><span class="m_12">Rp</span><span class="m_11">133<span class="m_12">rb</span></span></li>
               			<div class="clearfix"> </div>
               		</ul>
               	</div>
@@ -224,68 +224,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="clearfix"> </div>
 		</div>
-	</div>
-</div>
-<div class="about_grid">
-	<div class="container">
-		<h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">Happy<br></span>Clients</p>
-        </h4>
-		<div class="wmuSlider example1" style="height: 150px;">
-			<div class="wmuSliderWrapper">
-				<article style="position: absolute; width: 100%; opacity: 0;"> 
-				   	   <div class="banner-wrap">
-				   	 	   <ul class="grid-1">
-				   	 			<li class="grid-1_left">
-				   	 				<img src="images/s3.jpg" class="img-responsive" alt="">
-				   	 			</li>
-				   	 			<li class="grid-1_right">
-				   	 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. a type specimen book. It has survived not only five centuries. but also the leap into electronic typesetting, remaining essentially unchanged</p>
-								    <h4>By<br><span class="m_10">Leap Designer</span></h4>
-				   	 			</li>
-				   	 			<div class="clearfix"> </div>
-				   	 		</ul>
-				   	   </div>
-				   </article>
-				   <article style="position: relative; width: 100%; opacity: 1;"> 
-				   	   <div class="banner-wrap">
-				   	 	   <ul class="grid-1">
-				   	 			<li class="grid-1_left">
-				   	 				<img src="images/s4.jpg" class="img-responsive" alt="">
-				   	 			</li>
-				   	 			<li class="grid-1_right">
-				   	 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. a type specimen book. It has survived not only five centuries. but also the leap into electronic typesetting, remaining essentially unchanged</p>
-								    <h4>By<br><span class="m_10">Leap Designer</span></h4>
-				   	 			</li>
-				   	 			<div class="clearfix"> </div>
-				   	 		</ul>
-				   	   </div>
-				   </article>
-				    <article style="position: absolute; width: 100%; opacity: 0;"> 
-				   	   <div class="banner-wrap">
-				   	 	   <ul class="grid-1">
-				   	 			<li class="grid-1_left">
-				   	 				<img src="images/s2.jpg" class="img-responsive" alt="">
-				   	 			</li>
-				   	 			<li class="grid-1_right">
-				   	 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make. a type specimen book. It has survived not only five centuries. but also the leap into electronic typesetting, remaining essentially unchanged</p>
-								    <h4>By<br><span class="m_10">Leap Designer</span></h4>
-				   	 			</li>
-				   	 			<div class="clearfix"> </div>
-				   	 		</ul>
-				   	   </div>
-				   </article>
-				</div>
-			    <ul class="wmuSliderPagination">
-                	<li><a href="#" class="">0</a></li>
-                	<li><a href="#" class="">1</a></li>
-                	<li><a href="#" class="wmuActive">2</a></li>
-                </ul>
-            <ul class="wmuSliderPagination"><li><a href="#" class="">0</a></li><li><a href="#" class="wmuActive">1</a></li><li><a href="#">2</a></li></ul></div>
-            <script src="js/jquery.wmuSlider.js"></script> 
-			  <script>
-       			$('.example1').wmuSlider();         
-   		     </script> 	           	      
 	</div>
 </div>
 <div class="domain">
