--- a/pembayaran.html
+++ b/pembayaran.html
@@ -145,7 +145,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h4 class="tz-title-5 tzcolor-blue">
                            <p class="tzweight_Bold"><span class="m_20">Nama Domain </span></p>
                 </h4>
-                <div class="input-panel"></div>
+                <div class="input-panel">
+                <div class="inputgroupdomain">
+                    <input type="text" name="" class="form-control" placeholder="masukkan nama domain">
+                    <select class="form-control">
+                      <option value="here">.com</option>
+                      <option value="here">.net</option>
+                      <option value="here">.vin</option>
+                    </select>
+                    <button class="form-control">Check</button>
+                </div>
+                        
+                </div>
 
 
                 <h4 class="tz-title-5 tzcolor-blue">
