--- a/plans.html
+++ b/plans.html
@@ -68,10 +68,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Service</a></li>
-                    <li><a href="plans.html">Hosting</a></li>
+                    <li class="active"><a href="plans.html">Hosting</a></li>
                     <li><a href="domain.html">Domain</a></li>
                     <li><a href="webmail.html">WebMail</a></li>
                     <li class="dropdown">
@@ -99,7 +99,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="about_grid">
 	<div class="container">
 		<h4 class="tz-title-4 tzcolor-blue">
-                <p class="tzweight_Bold"><span class="m_1">our<br></span>Benefits</p>
+                <p class="tzweight_Bold"><span class="m_1">Regular<br></span>Hosting</p>
             </h4>
             <div class="col-md-3">
                 <div class="pricing-table-grid">
@@ -216,126 +216,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="clearfix"> </div>
      </div>
 </div>
-<div class="about_grid1">
-	<div class="container">
-	        <h4 class="tz-title-4 tzcolor-blue">
-               <p class="tzweight_Bold"><span class="m_1">Our<br></span>Hosting</p>
-            </h4>
-        	 <div class="col-md-3 thumb_2">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>5<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Standard Plan</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-							<div id="small-dialog" class="mfp-hide">
-									<div class="pop_up">
-									 	<div class="payment-online-form-left">
-											<form>
-												<h4><span class="shipping"> </span>Shipping</h4>
-												<ul>
-													<li><input class="text-box-dark" type="text" value="Frist Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Frist Name';}"></li>
-													<li><input class="text-box-dark" type="text" value="Last Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last Name';}"></li>
-												</ul>
-												<ul>
-													<li><input class="text-box-dark" type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}"></li>
-													<li><input class="text-box-dark" type="text" value="Company Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Company Name';}"></li>
-												</ul>
-												<ul>
-													<li><input class="text-box-dark" type="text" value="Phone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}"></li>
-													<li><input class="text-box-dark" type="text" value="Address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Address';}"></li>
-													<div class="clearfix"> </div>
-												</ul>
-												<div class="clear"> </div>
-											<ul class="payment-type">
-												<h4><span class="payment"> </span> Payments</h4>
-												<li>
-													<span class="col_checkbox">
-													<input id="3" class="css-checkbox1" type="checkbox">
-													<label for="3" name="demo_lbl_1" class="css-label1"> </label>
-													<a class="visa" href="#"> </a>
-													</span>
-												</li>
-												<li>
-													<span class="col_checkbox">
-														<input id="4" class="css-checkbox2" type="checkbox">
-														<label for="4" name="demo_lbl_2" class="css-label2"> </label>
-														<a class="paypal" href="#"> </a>
-													</span>
-												</li>
-												<div class="clearfix"> </div>
-											</ul>
-												<ul>
-													<li><input class="text-box-dark" type="text" value="Card Number" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Card Number';}"></li>
-													<li><input class="text-box-dark" type="text" value="Name on card" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name on card';}"></li>
-													<div class="clearfix"> </div>
-												</ul>
-												<ul>
-													<li><input class="text-box-light hasDatepicker" type="text" id="datepicker" value="Expiration Date" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Expiration Date';}"><em class="pay-date"> </em></li>
-													<li><input class="text-box-dark" type="text" value="Security Code" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Security Code';}"></li>
-													<div class="clearfix"> </div>
-												</ul>
-												<ul class="payment-sendbtns">
-													<li><input type="reset" value="Cancel"></li>
-													<li><input type="submit" value="Process order"></li>
-												</ul>
-												<div class="clearfix"> </div>
-											</form>
-										</div>
-						  			</div>
-								</div>
-		     </div>
-             <div class="col-md-3 thumb_2">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>6<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Advanced Plan</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-		     </div>	
-	         <div class="col-md-3 thumb_2">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>8<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Business Plan</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-		    </div>
-	        <div class="col-md-3 thumb_2">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>9<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Gold Plan</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-		    </div>	
-		    <div class="clearfix"> </div>						
-	 </div>
-</div>
 <div class="about_grid">
 	<div class="container">
 		<h4 class="tz-title-4 tzcolor-blue">
@@ -382,11 +262,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="about_grid">
 	<div class="container">
 		<h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">Hosting<br></span>3 Column</p>
+            <p class="tzweight_Bold"><span class="m_1">Package<br></span>Hosting</p>
         </h4>
 		<div class="col-md-4">
 							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>11<br><span class="month">Per Month</span></h3>
+								<h3><span class="dollar">Rp </span>400<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
 								<ul>
 									<li><span>Next Gen Host</span></li>
 									<li><a href="#">10GB Disk Space</a></li>
@@ -456,7 +336,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		     </div>
              <div class="col-md-4">
 							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>12<br><span class="month">Per Month</span></h3>
+								<h3><span class="dollar">Rp </span>700<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
 								<ul>
 									<li><span>Resellers Hosting</span></li>
 									<li><a href="#">10GB Disk Space</a></li>
@@ -470,7 +350,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		     </div>	
 	         <div class="col-md-4">
 							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>10<br><span class="month">Per Month</span></h3>
+								<h3><span class="dollar">Rp </span>900<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
 								<ul>
 									<li><span>Grid Web Hosting</span></li>
 									<li><a href="#">10GB Disk Space</a></li>
