--- a/service.html
+++ b/service.html
@@ -68,9 +68,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="service.html">Service</a></li>
+                    <li class="active"><a href="service.html">Service</a></li>
                     <li><a href="plans.html">Hosting</a></li>
                     <li><a href="domain.html">Domain</a></li>
                     <li><a href="webmail.html">WebMail</a></li>
@@ -150,7 +150,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/s1.jpg" class="img-responsive" alt=""/>
 				</div>
 				<div class="cont span_2_of_about">
-					<h3><a href="#">Domain</a></h3>
+					<h3><a href="domain.html">Domain</a></h3>
 				    <p>Kami memberikan Full control untuk domain Anda. Tidak ada syarat tersembunyi, tidak ada peraturan lock domain, atau semua keruwetan seperti provider hosting murah sebelah. So, kenapa harus beli di tempat lain, jika di SmartMedia lebih baik? </p>
 				</div>
 				<div class="clearfix"></div>	
@@ -160,7 +160,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/s1.jpg" class="img-responsive" alt=""/>
 				</div>
 				<div class="cont span_2_of_about">
-					<h3><a href="#">Hosting</a></h3>
+					<h3><a href="plans.html">Hosting</a></h3>
 				    <p>Setiap website pasti membutuhkan server hosting online agar bisa diakses melalui internet. Untuk itu kami memberikan solusi untuk Anda yang ingin website Anda bisa diakses melalui internet (online) dengan menyewakan space hosting murah. </p>
 				</div>
 				<div class="clearfix"></div>	
@@ -170,7 +170,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/s1.jpg" class="img-responsive" alt=""/>
 				</div>
 				<div class="cont span_2_of_about">
-					<h3><a href="#">Web Mail</a></h3>
+					<h3><a href="webmail.html">Web Mail</a></h3>
 				    <p>Email hosting memungkinkan Anda untuk memiliki email dengan alamat nama perusahaan Anda (nama_anda@namaperusahaan). Dengan layanan Email hosting, Anda bisa mempromosikan perusahaan Anda dengan mudah kepada rekan bisnis dan calon pelanggan Anda.</p>
 				</div>
 				<div class="clearfix"></div>	
