--- a/webmail.html
+++ b/webmail.html
@@ -68,12 +68,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Service</a></li>
                     <li><a href="plans.html">Hosting</a></li>
                     <li><a href="domain.html">Domain</a></li>
-                    <li><a href="webmail.html">WebMail</a></li>
+                    <li class="active"><a href="webmail.html">WebMail</a></li>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Store<span class="caret"></span></a>
                       <ul class="dropdown-menu">
@@ -102,29 +102,38 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <p class="tzweight_Bold"><span class="m_1">Follow<br></span>Steps</p>
         </h4>
 		<div class="plans_grid">
-		    <div class="col-md-4">
+		   	 <div class="col-md-3">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">1</li>
-				  <li class="desc"><h5><a href="#">Choose Your Plan</a></h5>
-				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
+				  <li class="desc"><h5><a href="#">Order Email Hosting</a></h5>
+				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				  </li>	
 				  <div class="clearfix"> </div>
 				</ul>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">2</li>
-				  <li class="desc"><h5><a href="#">Creative Your Account</a></h5>
-				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
+				  <li class="desc"><h5><a href="#">Konfirmasi Pembayaran</a></h5>
+				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				  </li>	
 				  <div class="clearfix"> </div>
 				</ul>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">3</li>
-				  <li class="desc"><h5><a href="#">Launch Your Hosting</a></h5>
-				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
+				  <li class="desc"><h5><a href="#">Email Hosting Aktif</a></h5>
+				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+				  </li>	
+				  <div class="clearfix"> </div>
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<ul class="project_box">
+				  <li class="mini-post-meta1">4</li>
+				  <li class="desc"><h5><a href="#">Silahkan Cek Email Hosting</a></h5>
+				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				  </li>	
 				  <div class="clearfix"> </div>
 				</ul>
@@ -140,7 +149,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </h4>
         	 <div class="col-md-3 thumb_2">
 							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>5<br><span class="month">Per Month</span></h3>
+								<h3><span class="dollar">Rp </span>150<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
 								<ul>
 									<li><span>Standard Plan</span></li>
 									<li><a href="#">10GB Disk Space</a></li>
@@ -210,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		     </div>
              <div class="col-md-3 thumb_2">
 							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>6<br><span class="month">Per Month</span></h3>
+								<h3><span class="dollar">Rp </span>300<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
 								<ul>
 									<li><span>Advanced Plan</span></li>
 									<li><a href="#">10GB Disk Space</a></li>
@@ -224,7 +233,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		     </div>	
 	         <div class="col-md-3 thumb_2">
 							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>8<br><span class="month">Per Month</span></h3>
+								<h3><span class="dollar">Rp </span>400<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
 								<ul>
 									<li><span>Business Plan</span></li>
 									<li><a href="#">10GB Disk Space</a></li>
@@ -238,7 +247,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		    </div>
 	        <div class="col-md-3 thumb_2">
 							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>9<br><span class="month">Per Month</span></h3>
+								<h3><span class="dollar">Rp </span>750<span class="dollar">rb</span> <br><span class="month">Per Bulan</span></h3>
 								<ul>
 									<li><span>Gold Plan</span></li>
 									<li><a href="#">10GB Disk Space</a></li>
@@ -256,7 +265,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="about_grid">
 	<div class="container">
 		<h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">Hosting<br></span>Feature</p>
+            <p class="tzweight_Bold"><span class="m_1">Web Email<br></span>Feature</p>
         </h4>
 		<div class="service_box">
 			<div class="col-md-4 service_grid1">
