--- a/reseller.html
+++ b/reseller.html
@@ -68,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <a class="toggleMenu" href="#">Menu</a>
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li ><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Service</a></li>
                     <li><a href="plans.html">Hosting</a></li>
@@ -82,7 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                       </ul>
                     </li>
                     <li><a href="promo.html">Promo</a></li>
-                    <li><a href="reseller.html">Reseller</a></li>
+                    <li  class="active"><a href="reseller.html">Reseller</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                  </ul>
                  <script type="text/javascript" src="js/nav.js"></script>
@@ -99,32 +99,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="about_grid">
 	<div class="container">
 		<h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">Follow<br></span>Steps</p>
+            <p class="tzweight_Bold"><span class="m_1">How to Be a<br></span>Reseller</p>
         </h4>
 		<div class="plans_grid">
-		    <div class="col-md-4">
+		    	<div class="col-md-3">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">1</li>
 				  <li class="desc"><h5><a href="#">Order Hosting</a></h5>
-				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
+				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				  </li>	
 				  <div class="clearfix"> </div>
 				</ul>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">2</li>
 				  <li class="desc"><h5><a href="#">Konfirmasi Pembayaran</a></h5>
-				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
+				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				  </li>	
 				  <div class="clearfix"> </div>
 				</ul>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<ul class="project_box">
 				  <li class="mini-post-meta1">3</li>
+				  <li class="desc"><h5><a href="#">Hosting Aktif</a></h5>
+				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+				  </li>	
+				  <div class="clearfix"> </div>
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<ul class="project_box">
+				  <li class="mini-post-meta1">4</li>
 				  <li class="desc"><h5><a href="#">Silahkan Cek Hosting</a></h5>
-				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
+				  	 <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 				  </li>	
 				  <div class="clearfix"> </div>
 				</ul>
@@ -248,155 +257,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		    </div>	
 		    <div class="clearfix"> </div>						
 	 </div>
-</div>
-<div class="about_grid">
-	<div class="container">
-		<h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">Hosting<br></span>Feature</p>
-        </h4>
-		<div class="service_box">
-			<div class="col-md-4 service_grid1">
-				<i class="icon1"> </i>
-				<h3>Unlimited Disk Space</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</div>
-			<div class="col-md-4 service_grid1">
-				<i class="icon2"> </i>
-				<h3>Unlimited Bandwidth</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</div>
-			<div class="col-md-4 service_grid1">
-				<i class="icon3"> </i>
-				<h3>27/7 Customer Support</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-		<div class="service_box1">
-			<div class="col-md-4 service_grid1">
-				<i class="icon4"> </i>
-				<h3>High Speed</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</div>
-			<div class="col-md-4 service_grid1">
-				<i class="icon5"> </i>
-				<h3>Site Protections</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</div>
-			<div class="col-md-4 service_grid1">
-				<i class="icon6"> </i>
-				<h3>SSD Database Storage</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-</div>
-<div class="about_grid">
-	<div class="container">
-		<h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">Hosting<br></span>3 Column</p>
-        </h4>
-		<div class="col-md-4">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>11<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Next Gen Host</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-							<div id="small-dialog" class="mfp-hide">
-									<div class="pop_up">
-									 	<div class="payment-online-form-left">
-											<form>
-												<h4><span class="shipping"> </span>Shipping</h4>
-												<ul>
-													<li><input class="text-box-dark" type="text" value="Frist Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Frist Name';}"></li>
-													<li><input class="text-box-dark" type="text" value="Last Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last Name';}"></li>
-												</ul>
-												<ul>
-													<li><input class="text-box-dark" type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}"></li>
-													<li><input class="text-box-dark" type="text" value="Company Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Company Name';}"></li>
-												</ul>
-												<ul>
-													<li><input class="text-box-dark" type="text" value="Phone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}"></li>
-													<li><input class="text-box-dark" type="text" value="Address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Address';}"></li>
-													<div class="clearfix"> </div>
-												</ul>
-												<div class="clear"> </div>
-											<ul class="payment-type">
-												<h4><span class="payment"> </span> Payments</h4>
-												<li>
-													<span class="col_checkbox">
-													<input id="3" class="css-checkbox1" type="checkbox">
-													<label for="3" name="demo_lbl_1" class="css-label1"> </label>
-													<a class="visa" href="#"> </a>
-													</span>
-												</li>
-												<li>
-													<span class="col_checkbox">
-														<input id="4" class="css-checkbox2" type="checkbox">
-														<label for="4" name="demo_lbl_2" class="css-label2"> </label>
-														<a class="paypal" href="#"> </a>
-													</span>
-												</li>
-												<div class="clearfix"> </div>
-											</ul>
-												<ul>
-													<li><input class="text-box-dark" type="text" value="Card Number" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Card Number';}"></li>
-													<li><input class="text-box-dark" type="text" value="Name on card" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name on card';}"></li>
-													<div class="clearfix"> </div>
-												</ul>
-												<ul>
-													<li><input class="text-box-light hasDatepicker" type="text" id="datepicker" value="Expiration Date" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Expiration Date';}"><em class="pay-date"> </em></li>
-													<li><input class="text-box-dark" type="text" value="Security Code" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Security Code';}"></li>
-													<div class="clearfix"> </div>
-												</ul>
-												<ul class="payment-sendbtns">
-													<li><input type="reset" value="Cancel"></li>
-													<li><input type="submit" value="Process order"></li>
-												</ul>
-												<div class="clearfix"> </div>
-											</form>
-										</div>
-						  			</div>
-								</div>
-		     </div>
-             <div class="col-md-4">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>12<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Resellers Hosting</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-		     </div>	
-	         <div class="col-md-4">
-							<div class="pricing-table-grid plan_box">
-								<h3><span class="dollar">$</span>10<br><span class="month">Per Month</span></h3>
-								<ul>
-									<li><span>Grid Web Hosting</span></li>
-									<li><a href="#">10GB Disk Space</a></li>
-									<li><a href="#">1TB Bandwidth</a></li>
-									<li><a href="#">Free DDoS Protection</a></li>
-									<li><a href="#">Free Daily Backups</a></li>
-									<li><a href="#">Managed Hosting</a></li>
-								</ul>
-								<a class="popup-with-zoom-anim order-btn" href="#small-dialog">Sign Up</a>
-							</div>
-		    </div>
-		    <div class="clearfix"> </div>
-	</div>
 </div>
 <div class="domain">
 	  <div class="container">
