--- a/store.html
+++ b/store.html
@@ -203,7 +203,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		    <div class="clearfix"> </div>
 	</div>
 </div>
-
+<div class="domain">
+	  <div class="container">
+		              <form class="search-form domain-search">
+			                       <div class="two-fifth signup column first">
+			                       	   <img src="images/msg.png" alt=""/>
+			                       	   <h2><span class="m_1">Sign Up Your</span><br>Newsletter</h2>
+			                       </div>
+                                	<div class="three-fifth searchbar column first">
+                                    	<input type="text" class="text" value="Enter your domain name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your domain name';}">               
+                                    </div>
+                                    <div class="one-fifth col_2 ">
+                                    	<input type="submit" value="Sign Up Now">
+                                    </div>
+                                    <div class="clearfix"> </div>
+                 </form>
+        </div>
+</div>
 <div class="footer">
 	<div class="container">
 		<div class="col-md-3 box_1">
