--- a/contact.html
+++ b/contact.html
@@ -160,8 +160,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </div>
 <div class="map">
-	     <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:400px;width:1519.2px;'><div id='gmap_canvas' style='height:400px;width:1519.2px;'></div><div><small><a href="http://embedgooglemaps.com">embed google maps</a></small></div><div><small><a href="https://ultimatewebtraffic.com/">buy targeted traffic</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(-8.007966924706475,112.62449056925311),mapTypeId: google.maps.MapTypeId.TERRAIN};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(-8.007966924706475,112.62449056925311)});infowindow = new google.maps.InfoWindow({content:'<strong>Illiyin.co</strong><br>Perum Puri Nirwana Keben Kav. 7<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
-	    </div>
+	<iframe
+	  width="600"
+	  height="450"
+	  frameborder="0" style="border:0"
+	  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDf97u6U6Uy5TvgI66pJxPyNZJ_wwcXagk 
+	    &q=Illiyin Studio" allowfullscreen>
+	</iframe>
 
 <div class="footer">
 	<div class="container">
