--- a/reseller.html
+++ b/reseller.html
@@ -258,7 +258,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		    <div class="clearfix"> </div>						
 	 </div>
 </div>
-<div class="domain">
+<div class="resellernews">
 	  <div class="container">
 		              <form class="search-form domain-search">
 			                       <div class="two-fifth signup column first">
