--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="box5">
 		  <div class="team_box1">
 			<div class="col-md-3 thumb_1">
-				<img src="images/freestock/people5.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/p1.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -185,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/freestock/people6.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/p2.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -202,7 +202,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/pic6.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/p3.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -219,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/freestock/people1.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/p4.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -239,7 +239,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		   </div>
 		   <div class="team_box2">
 			<div class="col-md-3 thumb_1">
-				<img src="images/freestock/people2.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/p5.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -256,7 +256,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/freestock/people4.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/p6.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -273,7 +273,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/pic10.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/p7.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
@@ -290,7 +290,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 thumb_1">
-				<img src="images/freestock/people3.jpg" class="img-responsive" alt=""/>
+				<img src="images/freestock/p8.jpg" class="img-responsive" alt=""/>
 				<div class="team_desc">
 					<div class="team_desc-left">
 						<h3>Lorem Ipsum</h3>
