--- a/pembayaran.html
+++ b/pembayaran.html
@@ -239,6 +239,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <p>silahkan periksa pesanan anda</p>
               </div>
             </div>
+            <table class="table table-striped">
+              <tbody>
+                <tr>
+                  <td>24x7 Help Support</td>
+                  <td>free</td>
+                </tr>
+                 <tr>
+                  <td>Instant Account Activation</td>
+                  <td>free</td>
+                </tr> 
+                 <tr>
+                  <td >ID Advanced Plan : 1 Tahun</td>
+                  <td class="detail-price">Rp. <span>1180.000</span></td>
+                </tr> 
+                <tr >
+                  <td class="totaled-price">Sub Total</td>
+                  <td class="detail-price">Rp. <span>180.000</span></td>
+                </tr> 
+                <tr >
+                  <td class="totaled-price">PPN 10%</td>
+                  <td class="detail-price">Rp. <span>18.000</span></td>
+                </tr> 
+                <tr >
+                  <td class="totaled-price">Total Due</td>
+                  <td class="detail-price">Rp. <span>198.000</span></td>
+                </tr> 
+              </tbody>
+            </table>
         </div>
             
 
